--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "tcg/voyager": "1.5"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest"
+        ,
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
